# greeters

./: .gitignore  Makefile  pyproject.toml  readme.md
guides/: Finn.txt  Lucas.txt  Michel.txt  Rudi.txt
src/greeters/: main.py
src/guides/: Bob.txt  Jon.txt  Max.txt  Seb.txt  Sophie.txt  Will.txt
tourists/: t1.txt  t2.txt  t3.txt
