[project]
authors = [{ name = "cvheinrich", email = "carlvicoheinrich@me.com" }]
name = "greeters"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["hf-xet>=1.1.1,<2"]

[project.optional-dependencies]
dev = ["ruff>=0.11.0", "mypy>=1.15.0"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-64"]

[tool.pixi.pypi-dependencies]
greeters = { path = ".", editable = true }

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
dev     = { features = ["dev"],  solve-group = "default" }

[tool.pixi.tasks]
start = 'python src/greeters/main.py'
check = "ruff check --fix"
format = "ruff format"
type = "mypy --strict ."

[tool.pixi.dependencies]
sentence-transformers = ">=4.1.0,<5"
python = "3.11.*"
