[project]
authors = [{ name = "cvheinrich", email = "carlvicoheinrich@me.com" }]
name = "greeters"
requires-python = ">= 3.12"
version = "0.1.0"
dependencies = ["hf-xet>=1.1.1,<2"]

[dependency-groups]
types = ["mypy>=1.15.0,<2"]
lint = ["ruff>=0.11.0,<0.12"]
dev = [{ include-group = "types" }, { include-group = "lint" }]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-64", "win-64"]
# ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
greeters = { path = ".", editable = true }

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
start = 'python src/greeters/main.py'

[tool.pixi.feature.dev.tasks]
check = "ruff check --fix"
format = "ruff format"
type = "mypy --strict ."
clean = { depends-on = ["check", "format", "type"] }

[tool.pixi.dependencies]
sentence-transformers = ">=4.1.0,<5"
python = "3.12.*"
